# signalcanvaslang

./: .gitignore  Cargo.toml  LICENSE  README.md  SCHEMA.md  SPEC.md
crates/patchlang/: Cargo.toml
crates/patchlang-cli/: Cargo.toml
crates/patchlang-cli/src/: error_display.rs  main.rs
crates/patchlang-python/: Cargo.toml
crates/patchlang-python/src/: lib.rs
crates/patchlang-wasm/: Cargo.toml
crates/patchlang-wasm/src/: lib.rs
crates/patchlang/bindings/: BridgeDecl.ts  BridgeGroupDecl.ts  BusEmitInput.ts  BusEntry.ts  BusNamedOutput.ts  BusOutput.ts  BusOutputEmitInput.ts  CanvasEmitInput.ts  CanvasLoadOutput.ts  CardEmitInput.ts  CardSlotGroupEmitInput.ts  CardSlotGroupOutput.ts  CardTemplateOutput.ts  ChannelLabelEmitInput.ts  ChannelLabelOutput.ts  ChannelMappingEmitInput.ts  ChannelMappingOutput.ts  CompileToGraphResult.ts  ConfigDecl.ts  ConfigLabel.ts  ConnectDecl.ts  ConnectionEmitInput.ts  ConnectionLoadOutput.ts  DRCLayer.ts  DeviceNode.ts  Diagnostic.ts  FlagDecl.ts  GraphEdge.ts  GraphLevel.ts  IndexElement.ts  IndexSpec.ts  InstalledCardEmitInput.ts  InstalledCardOutput.ts  InstanceDecl.ts  InstanceEmitInput.ts  InstanceLoadOutput.ts  InterfaceEmitInput.ts  KeyValue.ts  KvEmitInput.ts  KvValue.ts  (+38 more)
crates/patchlang/src/: ast.rs  body_parser.rs  compat.rs  compat_tests.rs  compat_types.rs  contract.rs  contract_tests.rs  error.rs  formatter.rs  formatter_emit.rs  formatter_tests.rs  graph_drill_consistency_tests.rs  graph_tests.rs  ids.rs  layout_cross_validation_tests.rs  layout_validator.rs  layout_validator_tests.rs  lexer.rs  lib.rs  manifest.rs  manifest_tests.rs  multi_file.rs  multi_file_tests.rs  output_test_helpers.rs  output_tests_auto.rs  parser.rs  (+13 more)
(+310 files in other folders)
