[package]
name = "patchlang-cli"
description = "PatchLang parser — command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "patchlang"
path = "src/main.rs"

[dependencies]
patchlang = { path = "../patchlang" }
clap = { version = "4", features = ["derive"] }
serde = "1"
serde_json = "1"
