[package]
name = "patchlang-wasm"
description = "PatchLang parser — WebAssembly bindings"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
patchlang = { path = "../patchlang" }
wasm-bindgen = "0.2"
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
