[package]
name = "patchlang"
description = "PatchLang parser — DSL for broadcast signal flow documentation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logos = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-compat"] }

[dev-dependencies]
insta = "1"
proptest = "1"
